# qc-extras

./: Makefile.am  README.md  configure.ac
include/: runtime_configuration.h  setlists_mem.h  ui.h
src/: list.c  main.c  runtime_configuration.c  setlists_mem.c  ui.c
